made page arrow fixed when height is too small

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,5 +1,6 @@
 @media (max-height: 730px) {
     #page-arrow {
+        position: fixed;
         right: 1rem;
         background-color: rgba(0, 0, 0, .5);
     }
